cmake_minimum_required(VERSION 3.25)
project(AlgoExpert)

set(CMAKE_CXX_STANDARD 23)

add_executable(AlgoExpert AlgoExpert.io/Arrays/two_number_sum.cpp AlgoExpert.io/Arrays/sorted_squared_array.cpp AlgoExpert.io/Arrays/non-constructible_change.cpp AlgoExpert.io/Arrays/validate_subsequence.cpp AlgoExpert.io/Arrays/transpose_matrix.cpp)
