cmake_minimum_required(VERSION 3.25)
project(AlgoExpert)

set(CMAKE_CXX_STANDARD 23)

add_executable(AlgoExpert LeetCode/Top100Liked/BinaryTree/98_validate_binary_search_tree.cpp LeetCode/Top100Liked/BinaryTree/22_invert_binary_tree.cpp LeetCode/Top100Liked/BinaryTree/104_maximum_depth_of_binary_tree.cpp)
